--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 --gray-25: #aaaaaa;
 --gray-50: #707070;
 --gray-75: #444444;
---black: #222222
+--black: #222222;
 --accent: #0d87e0;
 
 /* タイポグラフィ（フォントサイズ） */
